<resources>
    <string name="app_name">WeatherTask</string>
    <string name="menu_today">Today</string>
    <string name="menu_5days">Forecast for 5 Days</string>
    <string name="humidity_label">Humidity</string>
    <string name="wind_label">Wind</string>
    <string name="london">London</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="day">Day:</string>
    <string name="temperature">Temperature:</string>
    <string name="min_temperature">Min temperature</string>
    <string name="night_temperature">Night temperature</string>
    <string name="morningTemperature">Morning temperature</string>
    <string name="midDayTemperature">Day temperature</string>
    <string name="time_of_day">Time of day:</string>
</resources>